Fix input border color in dark mode, increase required left padding

--- a/src/wp-a11y-day/css/dark-mode.css
+++ b/src/wp-a11y-day/css/dark-mode.css
@@ -37,6 +37,7 @@ body {
 	--home-entry-header-subscribe-color: var(--bg);
 	--input-color: var(--bg);
 	--entry-title-color: var(--accent7);
+	--input-border-color: var(--bg);
 }
 
 .sponsorship *:not(h2),
